card flipping fully functional

--- a/pokerapp/templates/Lessons/lesson1 copy.html
+++ b/pokerapp/templates/Lessons/lesson1 copy.html
@@ -49,73 +49,71 @@
 
 </style>
 
-<div id="content" class="tabcontent">
-
-  <div class = "card-group">
-      <div class = "flipper col-sm-3">
-              <div class="card">
-                <div class="front">
-                    <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_ace.png" class ="adaptive">
-
-                </div>
-                <div class="back">
-                 <img src=" https://tekeye.uk/playing_cards/images/svg_playing_cards/backs/png_96_dpi/blue.png" class ="adaptive">
- 
-                </div>
-              </div>
+<div class = "container-fluid">
+  <div class="row">
+  <div class = "flipper col">
+    <div class = "card">
+            <div class="front">
+                <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/backs/png_96_dpi/blue.png" class ="responsive card-img-top">
             </div>
-            <div class="flipper  col-sm-3">
-              <div class="card">
-                <div class="front">
-        
-                    <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_ace.png"  class ="adaptive">
-                
-                  
-                </div>
-                <div class="back">
-                    <img src=" https://tekeye.uk/playing_cards/images/svg_playing_cards/backs/png_96_dpi/blue.png" class ="adaptive">
-                </div>
-                </div>
+            <div class="back">
+             <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_ace.png" class ="responsive card-img-top">
+
             </div>
-            <div class="flipper col-sm-3">
-              <div class="card">
-                <div class="front">
-   
-                    <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_ace.png" class ="adaptive">
-      
-     
-                </div>
-                <div class="back">
-                    <img src=" https://tekeye.uk/playing_cards/images/svg_playing_cards/backs/png_96_dpi/blue.png" class ="adaptive">
-                 
-                </div>
-              </div>
-            </div>
-        
-            <div class="flipper col-sm-3">
-                <div class="card">
-                  <div class="front">
-     
-                    <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_ace.png" class ="adaptive">
-        
-       
-                  </div>
-                  <div class="back">
-                    <img src=" https://tekeye.uk/playing_cards/images/svg_playing_cards/backs/png_96_dpi/blue.png" class ="adaptive">
-                   
-                  </div>
-                </div>
-              </div>
+        </div>
 
-
-
-
-
-          </div>
+      </div>
+        <div class="flipper  col">
+          <div class = "card">
+            <div class="front">
     
+                <img src=" https://tekeye.uk/playing_cards/images/svg_playing_cards/backs/png_96_dpi/blue.png"  class ="responsive card-img-top">
+            
+              
+            </div>
+            <div class="back">
+                <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_ace.png" class ="responsive card-img-top">
+            </div>
+            </div>
+          </div>
+        <div class="flipper col">
+          <div class = "card">
+            <div class="front">
+
+                <img src=" https://tekeye.uk/playing_cards/images/svg_playing_cards/backs/png_96_dpi/blue.png" class ="responsive card-img-top">
+  
+ 
+            </div>
+            <div class="back">
+                <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/diamonds_ace.png" class ="responsive card-img-top">
+             
+ 
+          </div>
+        </div>
+      </div>
+    
+        <div class="flipper col">
+          <div class = "card">
+              <div class="front">
+ 
+                <img src=" https://tekeye.uk/playing_cards/images/svg_playing_cards/backs/png_96_dpi/blue.png" class ="responsive card-img-top">
+    
+   
+              </div>
+              <div class="back">
+                <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/spades_ace.png" class ="responsive card-img-top">
+               
+              </div>
+              <div class = "card">
+    
+          </div>
 
 
+        </div>
 
+      </div>
+  </div>
+</div>
 
 
 
