--- a/pokerapp/templates/pokerlanding.html
+++ b/pokerapp/templates/pokerlanding.html
@@ -49,8 +49,8 @@
 
     <div class="card" style=" border-radius: 8px; background-color: rgb(47, 44, 221);">
         <div class="card-body">
-            <h2 class="card-title">Another headline</h2>
-            <p class="card-text">And an even wittier subheading.</p>
+            <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/other/png_96_dpi/spades_ace_simple.png"
+            class="responsive">
         </div>
     </div>
 </div>
