--- a/pokerapp/templates/Lessons/lesson1.html
+++ b/pokerapp/templates/Lessons/lesson1.html
@@ -3,125 +3,113 @@
 block title %}Lesson 1{% endblock %}{% block script %}
 <script src="{{url_for('static', filename='js/quiz.js') }}"></script> {%endblock%}{% block content %}
 
-<button class="tablink" onclick="openPage('content', this, 'red')" id="defaultOpen">Content</button>
+<button class="tablink" onclick="openPage('content', this, 'rgb(39, 42, 200)')" id="defaultOpen">Content</button>
 <button class="tablink" onclick="openPage('quiz2', this, 'green')">Quiz</button>
 
 <style>
-  .card {
-    margin: 15px;
-    padding: 10px;
-    border: 10px;
-    margin-top: 0px;
-    transition: 0.6s;
-    transform-style: preserve-3d;
-    position: relative;
-    background-color: transparent;
-  }
+    .card {
+      transition: 0.6s;
+      transform-style: preserve-3d;
+      position: relative;
+      background-color: transparent;
+    }
+    .flipper {
+      padding-left: 0px;
+      padding-right: 0px;
+      perspective: 1000px;
+    }
 
-  .flipper {
-    perspective: 1000px;
-  }
 
-  /* flip the pane when hovered */
-  .flipper.flip .card {
-    transform: rotateY(180deg);
-  }
+    .flipper.flip .card {
+      transform: rotateY(180deg);
+    }
+    .front,
+    .back {
+      width: 100%;
+      padding: 5px;
+      backface-visibility: hidden;
+      position: absolute;
+    }
 
-  .front,
-  .back {
-    backface-visibility: hidden;
-    position: absolute;
-  }
+    .front {
+      z-index: 2;
+      transform: rotateY(0deg);
+      height: auto;
+    }
 
-  /* front pane, placed above back */
-  .front {
-    z-index: 2;
-    /* for firefox 31 */
-    transform: rotateY(0deg);
+    .back {
+      transform: rotateY(180deg);
+      height: auto;
+    }
+
+    .row{
+    width: 100%;
+    height: 25vw;
+    overflow: hidden; 
+    }
+
+    .cardimg{  
+    width: 100%;
     height: auto;
-  }
+    height: 20vw;
+    object-fit: contain;
+    padding: 10%;
+    cursor: grab;
+    }
+    .cardimg:hover {
+    opacity: .8;
+}
 
-  /* back, initially hidden pane */
-  .back {
-    transform: rotateY(180deg);
-    height: auto;
-  }
 </style>
 
 <div id="content" class="tabcontent">
+  <h1 class="display-4 font-weight-normal header-main">Click to Reveal the Suits</h1>
+  <div class = "container-fluid">
+    <div class="row">
+    <div class = "flipper col">
+      <div class = "card">
+              <div class="front">
+                  <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/backs/png_96_dpi/red.png" class ="cardimg">
+              </div>
+              <div class="back">
+               <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_ace.png" class ="cardimg">
+              </div>
+          </div>
+        </div>
+          <div class="flipper  col">
+            <div class = "card">
+              <div class="front">
+                  <img src=" https://tekeye.uk/playing_cards/images/svg_playing_cards/backs/png_96_dpi/red.png"  class ="cardimg">
+              </div>
+              <div class="back">
+                  <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_ace.png" class ="cardimg">
+              </div>
+              </div>
+            </div>
+          <div class="flipper col">
+            <div class = "card">
+              <div class="front">
+                  <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/backs/png_96_dpi/red.png" class ="cardimg">
+              </div>
+              <div class="back">
+                  <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/diamonds_ace.png" class ="cardimg">
+            </div>
+          </div>
+        </div>
+          <div class="flipper col">
+            <div class = "card">
+                <div class="front">
+                  <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/backs/png_96_dpi/red.png" class ="cardimg">
+                </div>
+                <div class="back">
+                  <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/spades_ace.png" class ="cardimg">
+                 
+                </div>
+            </div>
+          </div>
 
-  <div class="card-group">
-    <div class="flipper col-sm-3">
-      <div class="card">
-        <div class="front card-body">
-          <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/backs/png_96_dpi/blue.png"
-            class="responsive">
-
-        </div>
-        <div class="back">
-          <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_ace.png"
-            class="responsive">
-        </div>
-      </div>
-    </div>
-    <div class="flipper  col-sm-3">
-      <div class="card">
-        <div class="front card-body">
-
-          <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/backs/png_96_dpi/blue.png"
-            class="responsive">
-        </div>
-        <div class="back">
-          <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/diamonds_ace.png"
-            class="responsive">
-        </div>
-      </div>
-    </div>
-    <div class="flipper col-sm-3">
-      <div class="card">
-        <div class="front card-body">
-          <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/backs/png_96_dpi/blue.png"
-            class="responsive">
-        </div>
-        <div class="back">
-          <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/other/png_96_dpi/spades_ace_simple.png"
-            class="responsive">
-        </div>
-      </div>
-    </div>
-
-    <div class="flipper col-sm-3">
-      <div class="card">
-        <div class="front card-body">
-          <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/backs/png_96_dpi/blue.png"
-            class="responsive">
-
-        </div>
-        <div class="back">
-          <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_ace.png"
-            class="responsive">
         </div>
       </div>
-    </div>
-
-  </div>
-
-  <div class= "card-group">
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <h3>Content</h3>
 <p>
@@ -141,7 +129,7 @@ block title %}Lesson 1{% endblock %}{% block script %}
 <img src="https://www.wsop.com/how-to-play-poker/images/how-to-card-rank.jpg" class="responsive">
 <!-- add picture of 13 cards-->
 </div>
-</div>
+
 
 
 <div id="quiz2" class="tabcontent">
