--- a/pokerapp/templates/Lessons/lesson1.html
+++ b/pokerapp/templates/Lessons/lesson1.html
@@ -19,7 +19,6 @@ block title %}Lesson 1{% endblock %}{% block script %}
       perspective: 1000px;
     }
 
-
     .flipper.flip .card {
       transform: rotateY(180deg);
     }
@@ -42,9 +41,9 @@ block title %}Lesson 1{% endblock %}{% block script %}
       height: auto;
     }
 
-    .row{
+    .rowtop{
     width: 100%;
-    height: 25vw;
+    height: 30vw;
     overflow: hidden; 
     }
 
@@ -58,14 +57,22 @@ block title %}Lesson 1{% endblock %}{% block script %}
     }
     .cardimg:hover {
     opacity: .8;
+    }
+    .normalcard{
+      max-width: 150px;
+    }
+    .padding-0{
+    padding-right:0;
+    padding-left:0;
 }
+
 
 </style>
 
 <div id="content" class="tabcontent">
   <h1 class="display-4 font-weight-normal header-main">Click to Reveal the Suits</h1>
   <div class = "container-fluid">
-    <div class="row">
+    <div class="row rowtop">
     <div class = "flipper col">
       <div class = "card">
               <div class="front">
@@ -73,6 +80,7 @@ block title %}Lesson 1{% endblock %}{% block script %}
               </div>
               <div class="back">
                <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_ace.png" class ="cardimg">
+               <p>HEARTS</p>
               </div>
           </div>
         </div>
@@ -83,6 +91,7 @@ block title %}Lesson 1{% endblock %}{% block script %}
               </div>
               <div class="back">
                   <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_ace.png" class ="cardimg">
+                  <p>CLUBS</p>
               </div>
               </div>
             </div>
@@ -93,6 +102,7 @@ block title %}Lesson 1{% endblock %}{% block script %}
               </div>
               <div class="back">
                   <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/diamonds_ace.png" class ="cardimg">
+                  <p>DIAMONDS</p>
             </div>
           </div>
         </div>
@@ -103,31 +113,110 @@ block title %}Lesson 1{% endblock %}{% block script %}
                 </div>
                 <div class="back">
                   <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/spades_ace.png" class ="cardimg">
-                 
+                  <p>SPADES</p>
                 </div>
             </div>
           </div>
 
         </div>
       </div>
-
-<h3>Content</h3>
 <p>
   Welcome to our first poker lesson. A deck of playing cards consists of four groups called suits. These suits are
-  spades and clubs which are commonly coloured black. As well as hearts and diamonds, commonly red.
+  spades and clubs which are commonly coloured black. As well as hearts and diamonds, commonly red.<br>
 </p>
 <img src="https://www.pngpix.com/wp-content/uploads/2016/11/PNGPIX-COM-Playing-Card-Symbols-PNG-Transparent-Image.png "
   class="responsive">
 <!--add picture of four suits-->
-<p>
-  Each suit has thirteen cards. The cards have a numerical order. There are the "face" cards of ace, jack, queen and
-  king. The ace acts as the number one. As well as the highest value in the suit. The jack acts as the eleventh card,
-  the queen twelth and
-  king thirteenth. A suit also has the cards two, three, four, five, six, seven, eight, nine and ten. If you had the
+<p><br>
+  Each suit has thirteen cards. The cards have a numerical order. There are the "face" cards of ace, king, queen and
+  jack. The ace acts as the number one. As well as the highest value in the suit. The jack acts as the eleventh card,
+  the queen twelth and king thirteenth.<br> </p>
+
+<div class ="container">
+  <div class = "row">
+ <div class = "col">
+   <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_ace.png" 
+    onmouseover="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/diamonds_ace.png'"
+    onmouseout="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_ace.png'"
+    class="responsive normalcard" alt=""/>
+  </div><div class = "col">
+    <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_king.png" 
+      onmouseover="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/diamonds_king.png'"
+      onmouseout="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_king.png'"
+      class="responsive normalcard" alt=""/>
+  </div><div class = "col">
+    <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_queen.png" 
+      onmouseover="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/diamonds_queen.png'"
+      onmouseout="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_queen.png'"
+      class="responsive normalcard" alt=""/>
+  </div><div class = "col">
+    <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_jack.png" 
+      onmouseover="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/diamonds_jack.png'"
+      onmouseout="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_jack.png'"
+      class="responsive normalcard" alt=""/>
+  </div>
+  </div>
+</div>
+
+
+  
+<p><br>
+  A suit also has the cards two, three, four, five, six, seven, eight, nine and ten. If you had the
   tenth card in the suit of clubs. It could be referred to as a "ten of clubs."
-</p>
-<img src="https://www.wsop.com/how-to-play-poker/images/how-to-card-rank.jpg" class="responsive">
-<!-- add picture of 13 cards-->
+  <br></p>
+  <div class ="container-fluid">
+    <div class = "row">
+   <div class = "col">
+    <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_10.png" 
+    onmouseover="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_10.png'"
+    onmouseout="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_10.png'"
+    class="responsive" alt="" style= " width: 100px;" />
+
+    </div><div class = "col">
+      <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_9.png" 
+    onmouseover="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_9.png'"
+    onmouseout="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_9.png'"
+    class="responsive" alt="" style= " width: 100px;"/>
+    </div><div class = "col">
+      <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_8.png" 
+      onmouseover="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_8.png'"
+      onmouseout="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_8.png'"
+      class="responsive" alt="" style= " width: 100px;"/>
+    </div><div class = "col">
+      <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_7.png" 
+      onmouseover="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_7.png'"
+      onmouseout="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_7.png'"
+      class="responsive" alt="" style= " width: 100px;"/>
+    </div><div class = "col">
+      <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_6.png" 
+      onmouseover="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_6.png'"
+      onmouseout="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_6.png'"
+      class="responsive" alt="" style= " width: 100px;"/>
+    </div><div class = "col">
+      <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_5.png" 
+      onmouseover="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_5.png'"
+      onmouseout="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_5.png'"
+      class="responsive" alt="" style= " width: 100px;"/>
+    </div><div class = "col">
+      <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_4.png" 
+    onmouseover="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_4.png'"
+    onmouseout="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_4.png'"
+    class="responsive" alt="" style= " width: 100px;"/>
+    </div><div class = "col">
+      <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_3.png" 
+      onmouseover="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_3.png'"
+      onmouseout="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_3.png'"
+      class="responsive" alt="" style= " width: 100px;"/>
+    </div><div class = "col">
+      <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_2.png" 
+      onmouseover="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_2.png'"
+      onmouseout="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_2.png'"
+      class="responsive" alt="" style= " width: 100px;"/>
+      </div>
+  </div>
+</div>
+
+
 </div>
 
 
