--- a/pokerapp/static/styles/lessons.css
+++ b/pokerapp/static/styles/lessons.css
@@ -42,3 +42,59 @@ ul.list-group {
 li.list-group-item {
     background-color: white;
 }
+/* style content page */ 
+ .flipper {
+    padding-left: 0px;
+    padding-right: 0px;
+    perspective: 1000px;
+  }
+
+  .flipper.flip .card {
+    transform: rotateY(180deg);
+  }
+  .front,
+  .back {
+    width: 100%;
+    padding: 5px;
+    backface-visibility: hidden;
+    position: absolute;
+  }
+
+  .front {
+    z-index: 2;
+    transform: rotateY(0deg);
+    height: auto;
+  }
+
+  .back {
+    transform: rotateY(180deg);
+    height: auto;
+  }
+
+  .rowtop{
+  width: 100%;
+  height: 30vw;
+  overflow: hidden; 
+  }
+
+  .cardimg{  
+  width: 100%;
+  height: auto;
+  height: 20vw;
+  object-fit: contain;
+  padding: 10%;
+  cursor: grab;
+  }
+  .cardimg:hover {
+  opacity: .8;
+  }
+  .normalcard{
+    max-width: 150px;
+  }
+
+  .cardflip{
+    transition: 0.6s;
+    transform-style: preserve-3d;
+    position: relative;
+    background-color: transparent;
+  }
