--- a/pokerapp/templates/Lessons/lessonshome.html
+++ b/pokerapp/templates/Lessons/lessonshome.html
@@ -30,7 +30,7 @@
 
     <div class="card cardtop highlight" style="border-radius: 8px">
       <a href="{{ url_for('lesson2')}}">
-        <img src="https://lh3.googleusercontent.com/proxy/xMRVa6gTAv8I2u307TegbJCTrupkZUPKXAgKZcE3Yx2-5UKgGTzxaXu7iPdl5GOGZ0yUYmOGrfF89JEifTls8QsujBA_S8Y" class="card-img-top responsive"
+        <img src="https://cmsstorage.rationalcdn.com/assets/ps/assets/common/images/how-to-play/content/poker-hands/texas-holdem/royal-flush.png" class="card-img-top responsive"
           alt="...">
         <div class="card-body">
           <h5 class="card-title">The Hands</h5>
