--- a/pokerapp/templates/base.html
+++ b/pokerapp/templates/base.html
@@ -60,7 +60,7 @@
             <div class="row">
 
                 <div class="col-lg-4 col-md-6 footer">
-                    <h5>Features</h5>
+                    <h5 style = "color:rgb(153, 27, 27)">Features</h5>
                     <ul class="list-unstyled text-small">
                         <li><a class="text-muted" href="TODO">Login</a></li>
                         <li><a class="text-muted" href="TODO">Home</a></li>
@@ -69,7 +69,7 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 footer">
-                    <h5>Features</h5>
+                    <h5 style = "color:rgb(153, 27, 27)">Features</h5>
                     <ul class="list-unstyled text-small">
                         <li><a class="text-muted" href="TODO">Login</a></li>
                         <li><a class="text-muted" href="TODO">Home</a></li>
@@ -79,7 +79,7 @@
 
 
                 <div class="col-lg-4 col-md-6 footer">
-                    <h5>Contact Us</h5>
+                    <h5 style = "color:rgb(153, 27, 27)">Contact Us</h5>
                     <ul class="list-unstyled text-small">
                         <li><a class="text-muted" href="mailto: 22710428@student.uwa.edu.au">Kane Alexander</a></li>
                         <li><a class="text-muted" href="mailto: 22705507@student.uwa.edu.au">Jordan Lee</a></li>
