--- a/pokerapp/templates/pokerlanding.html
+++ b/pokerapp/templates/pokerlanding.html
@@ -17,40 +17,46 @@
 <div class="card-group">
     <div class="card cardtop" style="border-radius: 8px">
         <div class="card-body">
-            <h2 class="card-title">The Suits</h5>
-                <p class="card-text" style="color:black">Learn the difference between spades, diamonds, clubs and
-                    hearts.</p>
-                <img src="https://www.pngpix.com/wp-content/uploads/2016/11/PNGPIX-COM-Playing-Card-Symbols-PNG-Transparent-Image.png"
-                    alt="4 suits" onclick="TODO" class="responsive"></img>
-        </div>
-    </div>
+            
 
-    <div class="card cardtop" style="border-radius: 8px; background-color: rgb(255, 255, 255)">
-        <div class="card-body">
             <h2 class="card-title">Challenge Yourself</h5>
-                <p class="card-text" style="color:black">See where you rank against other players with our results page.
+                <p class="card-text">See where you rank against other players with our results page.
                 </p>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8c/Standard_deviation_diagram.svg/1280px-Standard_deviation_diagram.svg.png"
-                    alt="distibution graph" onclick="TODO" class="responsive"></img>
+                    alt="distibution graph" onclick="TODO" class="responsive" style = "max-width: 35vw;"></img>
+        </div>
+    </div>
+    <div class="card cardtop" style="background-color: white;border-radius: 8px;">
+        <div class="card-body">
+            <h2 class="card-title">Interactive Learning Modules</h2>
+            <p class="card-text"style= "color:black;">Poker is a visual and interactive game, so learning it should be interactive to!</p>
+            <img src="https://cdn.dribbble.com/users/1981371/screenshots/6547432/poker_dribbble.gif"
+                alt="poker, flop turn and river" onclick="TODO" class="responsive" style = "max-width: 25vw;"></img>
         </div>
     </div>
 
 </div>
 
 <div class="card-group">
+    
     <div class="card bg-dark" style="border-radius: 8px;">
         <div class="card-body">
-            <h2 class="card-title">The Game</h2>
-            <p class="card-text" style="color:black">Learn how the game of Texas no limit holdem is played</p>
-            <img src="https://1ednx3tnfmz1xmk99kw15ns1-wpengine.netdna-ssl.com/wp-content/uploads/2019/05/flop-turn-river.png"
-                alt="poker, flop turn and river" onclick="TODO" class="responsive"></img>
+            <h2 class="card-title" style="color:white">Perfect for Beginners</h5>
+                <p class="card-text" style="color:white">Learn the poker basics or quickly refresh your poker skills.</p>
+                <img src="https://www.legalbetting.com/app/uploads/2020/03/hero-img-poker.png"
+                    alt="poker table" onclick="TODO" class="responsive" style = "max-width: 35vw;"></img>
+
         </div>
     </div>
 
-    <div class="card" style=" border-radius: 8px; background-color: rgb(47, 44, 221);">
+    
+
+    <div class="card" style=" border-radius: 8px; background-color:rgb(39, 42, 200)">
         <div class="card-body">
-            <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/other/png_96_dpi/spades_ace_simple.png"
-            class="responsive">
+            <h2 class="card-title" style = " color:white">Interactive Learning Modules</h2>
+            <p class="card-text" style = " color:white">Poker is a visual and interactive game, so learning it should be to!<br></p>
+            <img src="https://1ednx3tnfmz1xmk99kw15ns1-wpengine.netdna-ssl.com/wp-content/uploads/2019/05/flop-turn-river.png"
+                alt="poker, flop turn and river" onclick="TODO" class="responsive" style = "max-width: 35vw;"></img>
         </div>
     </div>
 </div>
