--- a/pokerapp/templates/Lessons/lesson1.html
+++ b/pokerapp/templates/Lessons/lesson1.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}{% block style %}
-<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/lessons.css') }}"> {% endblock %}{%
-block title %}Lesson 1{% endblock %}{% block script %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/lessons.css') }}"> {% endblock %}{% block title %}Lesson 1{% endblock %}{% block script %}
 <script src="{{url_for('static', filename='js/quiz.js') }}"></script> {%endblock%}{% block content %}
 
 <button class="tablink" onclick="openPage('content', this, 'rgb(39, 42, 200)')" id="defaultOpen">Content</button>
@@ -8,139 +7,138 @@ block title %}Lesson 1{% endblock %}{% block script %}
 
 <style>
     .card {
-      transition: 0.6s;
-      transform-style: preserve-3d;
-      position: relative;
-      background-color: transparent;
+        transition: 0.6s;
+        transform-style: preserve-3d;
+        position: relative;
+        background-color: transparent;
     }
+    
     .flipper {
-      padding-left: 0px;
-      padding-right: 0px;
-      perspective: 1000px;
+        padding-left: 0px;
+        padding-right: 0px;
+        perspective: 1000px;
     }
-
-
+    
     .flipper.flip .card {
-      transform: rotateY(180deg);
+        transform: rotateY(180deg);
     }
+    
     .front,
     .back {
-      width: 100%;
-      padding: 5px;
-      backface-visibility: hidden;
-      position: absolute;
+        width: 100%;
+        padding: 5px;
+        backface-visibility: hidden;
+        position: absolute;
     }
-
+    
     .front {
-      z-index: 2;
-      transform: rotateY(0deg);
-      height: auto;
+        z-index: 2;
+        transform: rotateY(0deg);
+        height: auto;
     }
-
+    
     .back {
-      transform: rotateY(180deg);
-      height: auto;
+        transform: rotateY(180deg);
+        height: auto;
     }
-
-    .row{
-    width: 100%;
-    height: 25vw;
-    overflow: hidden; 
+    
+    .row {
+        width: 100%;
+        height: 25vw;
+        overflow: hidden;
     }
-
-    .cardimg{  
-    width: 100%;
-    height: auto;
-    height: 20vw;
-    object-fit: contain;
-    padding: 10%;
-    cursor: grab;
+    
+    .cardimg {
+        width: 100%;
+        height: auto;
+        height: 20vw;
+        object-fit: contain;
+        padding: 10%;
+        cursor: grab;
     }
+    
     .cardimg:hover {
-    opacity: .8;
-}
-
+        opacity: .8;
+    }
 </style>
 
 <div id="content" class="tabcontent">
-  <h1 class="display-4 font-weight-normal header-main">Click to Reveal the Suits</h1>
-  <div class = "container-fluid">
-    <div class="row">
-    <div class = "flipper col">
-      <div class = "card">
-              <div class="front">
-                  <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/backs/png_96_dpi/red.png" class ="cardimg">
-              </div>
-              <div class="back">
-               <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_ace.png" class ="cardimg">
-              </div>
-          </div>
-        </div>
-          <div class="flipper  col">
-            <div class = "card">
-              <div class="front">
-                  <img src=" https://tekeye.uk/playing_cards/images/svg_playing_cards/backs/png_96_dpi/red.png"  class ="cardimg">
-              </div>
-              <div class="back">
-                  <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_ace.png" class ="cardimg">
-              </div>
-              </div>
-            </div>
-          <div class="flipper col">
-            <div class = "card">
-              <div class="front">
-                  <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/backs/png_96_dpi/red.png" class ="cardimg">
-              </div>
-              <div class="back">
-                  <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/diamonds_ace.png" class ="cardimg">
-            </div>
-          </div>
-        </div>
-          <div class="flipper col">
-            <div class = "card">
-                <div class="front">
-                  <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/backs/png_96_dpi/red.png" class ="cardimg">
-                </div>
-                <div class="back">
-                  <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/spades_ace.png" class ="cardimg">
-                 
+    <h1 class="display-4 font-weight-normal header-main">Click to Reveal the Suits</h1>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="flipper col">
+                <div class="card">
+                    <div class="front">
+                        <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/backs/png_96_dpi/red.png" class="cardimg">
+                    </div>
+                    <div class="back">
+                        <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_ace.png" class="cardimg">
+                    </div>
                 </div>
             </div>
-          </div>
+            <div class="flipper  col">
+                <div class="card">
+                    <div class="front">
+                        <img src=" https://tekeye.uk/playing_cards/images/svg_playing_cards/backs/png_96_dpi/red.png" class="cardimg">
+                    </div>
+                    <div class="back">
+                        <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_ace.png" class="cardimg">
+                    </div>
+                </div>
+            </div>
+            <div class="flipper col">
+                <div class="card">
+                    <div class="front">
+                        <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/backs/png_96_dpi/red.png" class="cardimg">
+                    </div>
+                    <div class="back">
+                        <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/diamonds_ace.png" class="cardimg">
+                    </div>
+                </div>
+            </div>
+            <div class="flipper col">
+                <div class="card">
+                    <div class="front">
+                        <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/backs/png_96_dpi/red.png" class="cardimg">
+                    </div>
+                    <div class="back">
+                        <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/spades_ace.png" class="cardimg">
+
+                    </div>
+                </div>
+            </div>
 
         </div>
-      </div>
+    </div>
 
-<h3>Content</h3>
-<p>
-  Welcome to our first poker lesson. A deck of playing cards consists of four groups called suits. These suits are
-  spades and clubs which are commonly coloured black. As well as hearts and diamonds, commonly red.
-</p>
-<img src="https://www.pngpix.com/wp-content/uploads/2016/11/PNGPIX-COM-Playing-Card-Symbols-PNG-Transparent-Image.png "
-  class="responsive">
-<!--add picture of four suits-->
-<p>
-  Each suit has thirteen cards. The cards have a numerical order. There are the "face" cards of ace, jack, queen and
-  king. The ace acts as the number one. As well as the highest value in the suit. The jack acts as the eleventh card,
-  the queen twelth and
-  king thirteenth. A suit also has the cards two, three, four, five, six, seven, eight, nine and ten. If you had the
-  tenth card in the suit of clubs. It could be referred to as a "ten of clubs."
-</p>
-<img src="https://www.wsop.com/how-to-play-poker/images/how-to-card-rank.jpg" class="responsive">
-<!-- add picture of 13 cards-->
+    <h3>Content</h3>
+    <p>
+        Welcome to our first poker lesson. A deck of playing cards consists of four groups called suits. These suits are spades and clubs which are commonly coloured black. As well as hearts and diamonds, commonly red.
+    </p>
+    <img src="https://www.pngpix.com/wp-content/uploads/2016/11/PNGPIX-COM-Playing-Card-Symbols-PNG-Transparent-Image.png " class="responsive">
+    <!--add picture of four suits-->
+    <p>
+        Each suit has thirteen cards. The cards have a numerical order. There are the "face" cards of ace, jack, queen and king. The ace acts as the number one. As well as the highest value in the suit. The jack acts as the eleventh card, the queen twelth and
+        king thirteenth. A suit also has the cards two, three, four, five, six, seven, eight, nine and ten. If you had the tenth card in the suit of clubs. It could be referred to as a "ten of clubs."
+    </p>
+    <img src="https://www.wsop.com/how-to-play-poker/images/how-to-card-rank.jpg" class="responsive">
+    <!-- add picture of 13 cards-->
 </div>
 
 
 
 <div id="quiz2" class="tabcontent">
-  <h3>Quiz 1</h3>
-  <p></p>
-  <form method="post" action="/submit">
-    <!-- SUbmit to the new database-->
+    <h3>Quiz 1</h3>
+
     <div id="quiz"></div>
-  </form>
-  <button id="submit">Submit Quiz</button>
-  <div id="results" style="color: white;"></div>
+    <button id="submit">Submit Quiz</button>
+    <div id="results" style="color: white;"></div>
+    <form action="" method="post">
+        {{ form.hidden_tag() }}
+        <p id="fauxscore"></p>
+        <p>{{form.submit2}}</p>
+    </form>
 </div>
+
 
 {% endblock %}
