--- a/pokerapp/templates/Lessons/lessonshome.html
+++ b/pokerapp/templates/Lessons/lessonshome.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="card cardtop highlight" style="border-radius: 8px">
-      <a href="{{ url_for('lesson3')}}"></a>
+      <a href="{{ url_for('lesson3')}}">
       <img src="https://1ednx3tnfmz1xmk99kw15ns1-wpengine.netdna-ssl.com/wp-content/uploads/2019/05/flop-turn-river.png"
         class="card-img-top responsive" alt="...">
       <div class="card-body">
