--- a/pokerapp/templates/Lessons/lesson2.html
+++ b/pokerapp/templates/Lessons/lesson2.html
@@ -18,7 +18,7 @@
     </p>
 
 </div>
-
+<h1>Lesson 2 in progress lol</h1>
 {% endblock %}{% block script %}
 
 <script src="{{url_for('static', filename='js/lesson1.js') }}"></script> {%endblock%}
