--- a/pokerapp/static/styles/lessons.css
+++ b/pokerapp/static/styles/lessons.css
@@ -34,6 +34,10 @@
     background-color: green;
 }
 
+#submit-continue {
+    visibility: hidden;
+}
+
 ul.list-group {
     list-style-type: none;
     color: black;
